Fix V / Angle set on wrong bus in busbreakerview after view invalidation
Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>